ops/local-envoy/envoy.yaml
static_resources:
  listeners:
    - name: local_api
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: local_api
                codec_type: AUTO
                route_config:
                  name: local_routes
                  virtual_hosts:
                    - name: gaegaeting
                      domains: ["*"]
                      routes:
                        - match: { prefix: /gateway/graphql }
                          route: { cluster: gateway, timeout: 30s }
                        - match: { path: /health }
                          direct_response: { status: 200, body: { inline_string: ok } }
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match: { prefix: / }
                          direct_response: { status: 404 }
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      http_service:
                        server_uri:
                          uri: http://host.docker.internal:4010
                          cluster: edge_authz
                          timeout: 2s
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: x-gaegaeting-edge-assertion
                      failure_mode_allow: false
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: gateway
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: gateway
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: host.docker.internal, port_value: 4000 }
    - name: edge_authz
      type: STRICT_DNS
      connect_timeout: 1s
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: edge_authz
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: host.docker.internal, port_value: 4010 }
